# trc_platform

./: .gitignore  Procfile  WARP.md
backend/: .env.example  BILLING_DATA_GENERATION.md  CAMELCASE_API_SETUP.md  CUSTOMERS_ME_FIX.md  Dockerfile  HEROKU_DEPLOYMENT.md  Makefile  README.md  TOKEN_AUTHENTICATION.md  UI.md  billing.md  compose.yml  create_staff_user.py  generate_billing_data.sh  info.md  models.ts  mypy.ini  prompt.md  pyproject.toml  requirements.txt  test_camelcase.py  test_chat_endpoint.py  test_current_user.py  test_current_user_endpoint.py  test_email_verification.py  test_image_storage.py  test_math_solver.py  test_result_storage.py  test_token_authentication.py  verify_billing_periods.py
backend/config/: settings.py  urls.py  wsgi.py
backend/core/: admin.py  authentication.py  authentication_optimized.py  exceptions.py  models.py  permissions.py  types.py  urls.py  urls_optimized.py  views.py  views_optimized.py
backend/core/management/commands/: bootstrap_demo.py  set_app_domain.py
backend/core/middleware/: __init__.py  optimized_token_auth.py  request_id.py  token_auth.py
backend/core/migrations/: 0001_initial.py  0002_add_app_domain.py  0003_update_app_domain_validator.py
backend/core/services/: __init__.py  exceptions.py  openai_client.py  types.py
backend/customers/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py  views_debug.py
backend/customers/management/commands/: clear_sessions.py
backend/customers/migrations/: 0001_initial.py  0002_update_token_prefix_length.py
backend/docs/: IMAGE_STORAGE_IMPLEMENTATION_PLAN.md  IMAGE_STORAGE_IMPLEMENTATION_SUMMARY.md  MATH_SOLVER.md
backend/tests/: QUICK_TEST_CARD.md  TEST_EMAIL_REGISTRATION.md
backend/usage/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/usage/migrations/: 0001_initial.py  0002_billingperiod_requestlog_billing_period_and_more.py  0003_requestimage.py  0004_add_result_field.py
frontend/: .env.example  (+8 more)
(+42 files in other folders)
